--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,21 @@
+
 cmake_minimum_required(VERSION 3.10)
 project(STLViewer)
-
-# Set preference for GLVND
-set(OpenGL_GL_PREFERENCE "GLVND")
 set(CMAKE_BUILD_TYPE Debug)
-
-# Find OpenGL package
+# Find OpenGL and GLUT
 find_package(OpenGL REQUIRED)
+set(GLUT_INCLUDE_DIR "C:/Program Files (x86)/msys2/mingw64")
+set(GLUT_LIBRARY -lglfw3)
+set(GLEW_LIBRARY -lglew32)
 
-# Manually specify GLUT include directory and library
-set(GLUT_INCLUDE_DIR /usr/include/GL)
-set(GLUT_LIBRARY -lglut)
+
 
 # Add executable
 add_executable(STLViewer main.cpp)
 
 # Include OpenGL and GLUT directories
-target_include_directories(STLViewer PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR})
+target_include_directories(STLViewer PRIVATE ${GLUT_INCLUDE_DIR})
 
+message("Value of VAR_NAME: ${OPENGL_INCLUDE_DIRS}")
 # Link OpenGL and GLUT libraries
-target_link_libraries(STLViewer PRIVATE ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
+target_link_libraries(STLViewer PRIVATE ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARY})
